Sleeps and activities spec
Better documentation for sleeps and activities controllers.
Not found method moved to application controller.
Length type in sleeps controller documentation worth checking,
might be wrong, because I wasn't sure what to put there.
