# app/controllers/api/v1/sleeps_controller.rb
@@ -3,11 +3,13 @@ module Api
         class SleepsController < ApplicationController
             before_action :set_sleep, only: :destroy
             before_action :set_day, only: :create
+            rescue_from ActiveRecord::RecordNotFound, :with => :not_found_error
 
             def create
                 @day = Day.create(date: Time.now.beginning_of_day) unless @day
-                @sleep = Sleep.new(day: @day, length: params[:length])
-                
+                @sleep = @day.build_sleep(sleep_params)
+                # binding.irb
+
                 if @sleep.save
                     render json: @sleep, status: :created, location: api_v1_sleep_path(@sleep)
                 else
@@ -16,13 +18,17 @@ module Api
             end
 
             def destroy
-                @sleep.destroy
+                @sleep.destroy if @sleep
             end
             
             private
             # Use callbacks to share common setup or constraints between actions.
             def set_sleep
                 @sleep = Sleep.find(params[:id])
+            end
+
+            def sleep_params
+                params.require(:sleep).permit(:length)
             end
         end
     end
