# swagger/v1/swagger.yaml
@@ -12,6 +12,32 @@ paths:
       responses:
         '201':
           description: successful
+          content:
+            application/json:
+              examples:
+                activity:
+                  value:
+                    id: 1
+                    day_id: 3
+                    date: '2023-04-06T15:17:11.126Z'
+                    created_at: '2023-04-06T15:17:11.136Z'
+                    updated_at: '2023-04-06T15:17:11.136Z'
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  day_id:
+                    type: integer
+                  date:
+                    type: datetime
+                    nullable: false
+                  created_at:
+                    type: datetime
+                    nullable: false
+                  updated_at:
+                    type: datetime
+                    nullable: false
   "/api/v1/activities/{id}":
     parameters:
     - name: id
@@ -27,6 +53,8 @@ paths:
       responses:
         '204':
           description: no content
+        '404':
+          description: not found
   "/api/v1/days":
     get:
       summary: list days
@@ -182,9 +210,45 @@ paths:
       summary: create sleep
       tags:
       - Sleeps
+      parameters: []
       responses:
         '201':
           description: created
+          content:
+            application/json:
+              examples:
+                sleep:
+                  value:
+                    id: 1
+                    length: '2000-01-01T15:52:28.298Z'
+                    created_at: '2023-04-06T15:24:47.632Z'
+                    updated_at: '2023-04-06T15:24:47.632Z'
+                    day_id: 3
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  length:
+                    type: datetime
+                    nullable: true
+                  created_at:
+                    type: datetime
+                    nullable: false
+                  updated_at:
+                    type: datetime
+                    nullable: false
+                  day_id:
+                    type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                length:
+                  type: string
+                  format: datetime
   "/api/v1/sleeps/{id}":
     parameters:
     - name: id
@@ -200,6 +264,8 @@ paths:
       responses:
         '204':
           description: no content
+        '404':
+          description: not found
 servers:
 - url: http://{defaultHost}
   variables:
